--- a/default.hbs
+++ b/default.hbs
@@ -111,6 +111,19 @@
 
 <script src="/assets/js/main.js"></script>
 
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'blowchart';
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
+
 {{! Ghost outputs important scripts and data with this tag }}
 {{ghost_foot}}
 </body>
